force-app/main/default/objects/FTMSSO__c/FTMSSO__c.object-meta.xml
<CustomObject>
    <label>Shipment.</label>
    <nameField>
        <displayFormat>FSO-{000000}</displayFormat>
        <label>Shipment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments.</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>