force-app/main/default/objects/FTMSSO__c/fields/AccountedDate__c.field-meta.xml
<CustomField>
    <fullName>AccountedDate__c</fullName>
    <label>Accounted Date</label>
    <type>Date</type>
</CustomField>