force-app/main/default/objects/FTMSSO__c/fields/Advanced_Shipment_fomula__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Shipment_fomula__c</fullName>
    <formula>ConsolidationID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advanced Shipment</label>
    <type>Text</type>
</CustomField>