force-app/main/default/objects/FTMSSO__c/fields/Agent2nd__c.field-meta.xml
<CustomField>
    <fullName>Agent2nd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent (2nd)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_OPK7V</relationshipName>
    <type>Lookup</type>
</CustomField>