force-app/main/default/objects/FTMSSO__c/fields/Agent2ndDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>Agent2ndDetailInformation__c</fullName>
    <label>Agent 2nd’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>