force-app/main/default/objects/FTMSSO__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This Agent will be show on Bill</inlineHelpText>
    <label>Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O4</relationshipName>
    <type>Lookup</type>
</CustomField>