force-app/main/default/objects/FTMSSO__c/fields/AgentDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>AgentDetailInformation__c</fullName>
    <label>Agent’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>