force-app/main/default/objects/FTMSSO__c/fields/AgentDetailInformation_text__c.field-meta.xml
<CustomField>
    <fullName>AgentDetailInformation_text__c</fullName>
    <label>Agent&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>