force-app/main/default/objects/FTMSSO__c/fields/agentnamefor__c.field-meta.xml
<CustomField>
    <fullName>agentnamefor__c</fullName>
    <formula>IF (NOT(ISBLANK( Agent__r.AccountNameENG__c )), Agent__r.AccountNameENG__c , NULL)</formula>
    <label>agent name - for</label>
    <type>Text</type>
</CustomField>