force-app/main/default/objects/FTMSSO__c/fields/AgentsdebitcreditNo__c.field-meta.xml
<CustomField>
    <fullName>AgentsdebitcreditNo__c</fullName>
    <label>Agent&apos;s debit/ credit No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>