force-app/main/default/objects/FTMSSO__c/fields/Air_type__c.field-meta.xml
<CustomField>
    <fullName>Air_type__c</fullName>
    <label>Air type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TransportationWay__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Air_Type</valueSetName>
    </valueSet>
</CustomField>