force-app/main/default/objects/FTMSSO__c/fields/AmountofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountofBuyingLocal__c</fullName>
    <label>Amount of Buying(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>