force-app/main/default/objects/FTMSSO__c/fields/ANRemarks__c.field-meta.xml
<CustomField>
    <fullName>ANRemarks__c</fullName>
    <label>A/N Remarks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>