force-app/main/default/objects/FTMSSO__c/fields/ApplyTax__c.field-meta.xml
<CustomField>
    <fullName>ApplyTax__c</fullName>
    <formula>IF(ISBLANK(ShippingInformation__c) = TRUE, ConsolidationID__r.ShippingInformation__r.ApplyTax__c , ShippingInformation__r.ApplyTax__c)</formula>
    <label>Apply Tax?</label>
    <type>Checkbox</type>
</CustomField>