force-app/main/default/objects/FTMSSO__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval required</fullName>
                <default>true</default>
                <label>Approval required</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>No approval required</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Process Fail</fullName>
                <isActive>false</isActive>
                <label>Process Fail</label>
            </value>
            <value>
                <fullName>Process Requested</fullName>
                <isActive>false</isActive>
                <label>Process Requested</label>
            </value>
            <value>
                <fullName>Processed Successfully</fullName>
                <isActive>false</isActive>
                <label>Processed Successfully</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>