force-app/main/default/objects/FTMSSO__c/fields/ArrivalNoticeCheck__c.field-meta.xml
<CustomField>
    <fullName>ArrivalNoticeCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrival Notice</label>
    <type>Checkbox</type>
</CustomField>