force-app/main/default/objects/FTMSSO__c/fields/BLType__c.field-meta.xml
<CustomField>
    <fullName>BLType__c</fullName>
    <label>B/L Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>H B/L Issue Required</fullName>
            </value>
            <value>
                <fullName>Direct M B/L(H B/L Issue Not Required)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>