force-app/main/default/objects/FTMSSO__c/fields/BookingNo__c.field-meta.xml
<CustomField>
    <fullName>BookingNo__c</fullName>
    <label>Booking No</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>