force-app/main/default/objects/FTMSSO__c/fields/BookingNoteCheck__c.field-meta.xml
<CustomField>
    <fullName>BookingNoteCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Note</label>
    <type>Checkbox</type>
</CustomField>