force-app/main/default/objects/FTMSSO__c/fields/BookingOrderCheck__c.field-meta.xml
<CustomField>
    <fullName>BookingOrderCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Order</label>
    <type>Checkbox</type>
</CustomField>