force-app/main/default/objects/FTMSSO__c/fields/BookingRemark__c.field-meta.xml
<CustomField>
    <fullName>BookingRemark__c</fullName>
    <label>Booking Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>