force-app/main/default/objects/FTMSSO__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch (not used)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ha Noi</fullName>
                <default>true</default>
                <label>Ha Noi</label>
            </value>
            <value>
                <fullName>Hai Phong</fullName>
            </value>
            <value>
                <fullName>Ho Chi Minh</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>