force-app/main/default/objects/FTMSSO__c/fields/Branch_text__c.field-meta.xml
<CustomField>
    <fullName>Branch_text__c</fullName>
    <inlineHelpText>System will auto generate this information based on Branch information of creator</inlineHelpText>
    <label>Branch-text</label>
    <type>TextArea</type>
</CustomField>