force-app/main/default/objects/FTMSSO__c/fields/BranchpickupDO__c.field-meta.xml
<CustomField>
    <fullName>BranchpickupDO__c</fullName>
    <label>Branch pick up DO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ha Noi</fullName>
            </value>
            <value>
                <fullName>Hai Phong</fullName>
            </value>
            <value>
                <fullName>Ho Chi Minh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>