force-app/main/default/objects/FTMSSO__c/fields/BuyingBillPaid__c.field-meta.xml
<CustomField>
    <fullName>BuyingBillPaid__c</fullName>
    <label>Buying-Bill Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>