force-app/main/default/objects/FTMSSO__c/fields/CancellationTime__c.field-meta.xml
<CustomField>
    <fullName>CancellationTime__c</fullName>
    <label>Cancellation Time</label>
    <type>DateTime</type>
</CustomField>