force-app/main/default/objects/FTMSSO__c/fields/Cargo_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Unit_Text__c</fullName>
    <label>Cargo Unit Text</label>
    <type>TextArea</type>
</CustomField>