force-app/main/default/objects/FTMSSO__c/fields/CargoDeliveryRemark__c.field-meta.xml
<CustomField>
    <fullName>CargoDeliveryRemark__c</fullName>
    <label>Cargo Delivery Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>