force-app/main/default/objects/FTMSSO__c/fields/CargoOwnershipType__c.field-meta.xml
<CustomField>
    <fullName>CargoOwnershipType__c</fullName>
    <label>Cargo Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipment_Source</valueSetName>
    </valueSet>
</CustomField>