force-app/main/default/objects/FTMSSO__c/fields/CargoStatus__c.field-meta.xml
<CustomField>
    <fullName>CargoStatus__c</fullName>
    <label>Cargo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Job</fullName>
                <default>true</default>
                <label>Create Job</label>
            </value>
            <value>
                <fullName>Ready for Schedule</fullName>
            </value>
            <value>
                <fullName>Create Estimate Job Cost</fullName>
            </value>
            <value>
                <fullName>Shipping Instruction</fullName>
            </value>
            <value>
                <fullName>Create Bill Draft</fullName>
            </value>
            <value>
                <fullName>Departured</fullName>
            </value>
            <value>
                <fullName>Issue Bill Final</fullName>
            </value>
            <value>
                <fullName>Issue Debit Note/Credit Note</fullName>
            </value>
            <value>
                <fullName>Send Docs to Agent</fullName>
            </value>
            <value>
                <fullName>Received Money</fullName>
            </value>
            <value>
                <fullName>Release Bill</fullName>
            </value>
            <value>
                <fullName>Issue PL Sheet</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>