force-app/main/default/objects/FTMSSO__c/fields/CargoType__c.field-meta.xml
<CustomField>
    <fullName>CargoType__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoType</valueSetName>
    </valueSet>
</CustomField>