force-app/main/default/objects/FTMSSO__c/fields/CarrierAirlinersHBLHAWB__c.field-meta.xml
<CustomField>
    <fullName>CarrierAirlinersHBLHAWB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this checkbox before inputting HBL/HAWB No from Carrier/Airliner.</inlineHelpText>
    <label>Carrier/Airliner&apos;s HBL/HAWB ?</label>
    <type>Checkbox</type>
</CustomField>