force-app/main/default/objects/FTMSSO__c/fields/CarrierAirlinerVendor__c.field-meta.xml
<CustomField>
    <fullName>CarrierAirlinerVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier/Airliner/Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O5</relationshipName>
    <type>Lookup</type>
</CustomField>