force-app/main/default/objects/FTMSSO__c/fields/CarrierDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>CarrierDetailInformation__c</fullName>
    <label>Carrier’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>