force-app/main/default/objects/FTMSSO__c/fields/CarrierDetailInformation_text__c.field-meta.xml
<CustomField>
    <fullName>CarrierDetailInformation_text__c</fullName>
    <label>Carrier&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>