force-app/main/default/objects/FTMSSO__c/fields/CarrierFormula__c.field-meta.xml
<CustomField>
    <fullName>CarrierFormula__c</fullName>
    <formula>CarrierAirlinerVendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier - Formula</label>
    <type>Text</type>
</CustomField>