force-app/main/default/objects/FTMSSO__c/fields/CBM_HBL__c.field-meta.xml
<CustomField>
    <fullName>CBM_HBL__c</fullName>
    <label>CBM (HBL)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>