force-app/main/default/objects/FTMSSO__c/fields/CBM_is_changed__c.field-meta.xml
<CustomField>
    <fullName>CBM_is_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBM is changed</label>
    <type>Checkbox</type>
</CustomField>