force-app/main/default/objects/FTMSSO__c/fields/CClearanceDeclarationNo__c.field-meta.xml
<CustomField>
    <fullName>CClearanceDeclarationNo__c</fullName>
    <label>C.Clearance Declaration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>