force-app/main/default/objects/FTMSSO__c/fields/CertificateofOrigin__c.field-meta.xml
<CustomField>
    <fullName>CertificateofOrigin__c</fullName>
    <label>Certificate of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>