force-app/main/default/objects/FTMSSO__c/fields/Check_Month__c.field-meta.xml
<CustomField>
    <fullName>Check_Month__c</fullName>
    <formula>MONTH(TODAY())-MONTH(  AccountedDate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>