force-app/main/default/objects/FTMSSO__c/fields/CheckClone__c.field-meta.xml
<CustomField>
    <fullName>CheckClone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Clone</label>
    <type>Checkbox</type>
</CustomField>