force-app/main/default/objects/FTMSSO__c/fields/Collect_Check_box_HBL__c.field-meta.xml
<CustomField>
    <fullName>Collect_Check_box_HBL__c</fullName>
    <formula>IF(TEXT(HouseFreightCollectPrepaid__c)=&quot;Collected&quot;,&quot;X&quot;,&quot; &quot;)</formula>
    <label>Collect Check box (HBL)</label>
    <type>Text</type>
</CustomField>