force-app/main/default/objects/FTMSSO__c/fields/CollectAt__c.field-meta.xml
<CustomField>
    <fullName>CollectAt__c</fullName>
    <label>Collect At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>