force-app/main/default/objects/FTMSSO__c/fields/CollectMoney__c.field-meta.xml
<CustomField>
    <fullName>CollectMoney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Money</label>
    <type>Checkbox</type>
</CustomField>