force-app/main/default/objects/FTMSSO__c/fields/CoLoader__c.field-meta.xml
<CustomField>
    <fullName>CoLoader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoLoader</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_OBdJQ</relationshipName>
    <type>Lookup</type>
</CustomField>