force-app/main/default/objects/FTMSSO__c/fields/ColoadersInvoiceno__c.field-meta.xml
<CustomField>
    <fullName>ColoadersInvoiceno__c</fullName>
    <label>Coloader’s Invoice no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>