force-app/main/default/objects/FTMSSO__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <referenceTo>Commodity__c</referenceTo>
    <relationshipName>F_TMS_S_O</relationshipName>
    <type>Lookup</type>
</CustomField>