force-app/main/default/objects/FTMSSO__c/fields/CommodityType__c.field-meta.xml
<CustomField>
    <fullName>CommodityType__c</fullName>
    <label>Commodity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food &amp; Beverages</fullName>
            </value>
            <value>
                <fullName>Paper &amp; Chemical Products</fullName>
            </value>
            <value>
                <fullName>Electronics &amp; Electrical material</fullName>
            </value>
            <value>
                <fullName>Machinery, Utensils &amp; Metalware</fullName>
            </value>
            <value>
                <fullName>Marble &amp; Tiles</fullName>
            </value>
            <value>
                <fullName>Furniture, Frames, Wood Articles</fullName>
            </value>
            <value>
                <fullName>Textiles, Garments, and accessories</fullName>
            </value>
            <value>
                <fullName>Glass, Ceramic, and Plasticware</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Rice</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spare Part</fullName>
            </value>
            <value>
                <fullName>Rescue Boat</fullName>
            </value>
            <value>
                <fullName>Davit System</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>