force-app/main/default/objects/FTMSSO__c/fields/CompletelyPaid__c.field-meta.xml
<CustomField>
    <fullName>CompletelyPaid__c</fullName>
    <formula>IF(NumberofBuyingBilling__c = BuyingBillPaid__c&amp;&amp; NumberofBuyingBilling__c &lt;&gt; 0 &amp;&amp; BuyingBillPaid__c&lt;&gt; 0,TRUE,FALSE)</formula>
    <label>Completely Paid</label>
    <type>Checkbox</type>
</CustomField>