force-app/main/default/objects/FTMSSO__c/fields/CompletelyReceived__c.field-meta.xml
<CustomField>
    <fullName>CompletelyReceived__c</fullName>
    <formula>IF(NumberofSellingBilling__c = SellingBillReceived__c &amp;&amp; NumberofSellingBilling__c &lt;&gt; 0 &amp;&amp; SellingBillReceived__c &lt;&gt; 0,TRUE,FALSE)</formula>
    <label>Completely Received</label>
    <type>Checkbox</type>
</CustomField>