force-app/main/default/objects/FTMSSO__c/fields/ConsealReportOnly__c.field-meta.xml
<CustomField>
    <fullName>ConsealReportOnly__c</fullName>
    <formula>TEXT ( ContainerQuantity1__c ) &amp;  &quot;x&quot;  &amp;  TEXT ( ContainerType1__c )  &amp;

IF (  ISNULL ( ContainerQuantity2__c ) , &quot;&quot; , &quot;; &quot;  &amp;  TEXT ( ContainerQuantity2__c ) &amp;  &quot;x&quot;  &amp;  TEXT ( ContainerType2__c ) ) &amp;

IF (  ISNULL ( ContainerQuantity3__c ) , &quot;&quot; , &quot;; &quot;  &amp;  TEXT ( ContainerQuantity3__c ) &amp;  &quot;x&quot;  &amp;  TEXT ( ContainerType3__c ) ) &amp;  

&quot;; &quot;  &amp;  TEXT ( GrossWeight__c )  &amp;  &quot; Kgs / &quot;  &amp;   TEXT ( MeasurementTotalCBM__c )  &amp;  &quot; CBM&quot;</formula>
    <label>Conseal</label>
    <type>Text</type>
</CustomField>