force-app/main/default/objects/FTMSSO__c/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>F_TMS_S_O2</relationshipName>
    <type>Lookup</type>
</CustomField>