force-app/main/default/objects/FTMSSO__c/fields/ConsigneeDetailInformation1__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeDetailInformation1__c</fullName>
    <formula>IF(NOT(ISBLANK( Consignee__r.AccountNameENG__c )), Consignee__r.AccountNameENG__c , NULL) + &quot; &quot; + BR()&amp;
IF(NOT(ISBLANK(Consignee__r.BillingStreet)), Consignee__r.BillingStreet , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingCity)), Consignee__r.BillingCity , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingState)), Consignee__r.BillingState, NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingPostalCode)), &quot;, &quot; + Consignee__r.BillingPostalCode , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingCountry)), Consignee__r.BillingCountry, NULL) + &quot; &quot; + BR()&amp;
IF(NOT(ISBLANK(Consignee__r.Phone)), &quot; &quot; + &quot;TEL:&quot; +&quot; &quot;+ Consignee__r.Phone, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee&apos;s Detail Information1</label>
    <type>Text</type>
</CustomField>