force-app/main/default/objects/FTMSSO__c/fields/ConsigneeDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeDetailInformation__c</fullName>
    <label>Consignee’s Detail Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>