force-app/main/default/objects/FTMSSO__c/fields/ConsigneeDetailInformation_text__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeDetailInformation_text__c</fullName>
    <label>Consignee&apos;s Detail Information</label>
    <type>TextArea</type>
</CustomField>