force-app/main/default/objects/FTMSSO__c/fields/ConsigneeDetailsonUQ__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeDetailsonUQ__c</fullName>
    <formula>IF(NOT(ISBLANK( Consignee__r.AccountNameENG__c )), Consignee__r.AccountNameENG__c , NULL) + &quot; &quot; + BR()&amp;
IF(NOT(ISBLANK(Consignee__r.BillingStreet)), Consignee__r.BillingStreet , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingCity)), Consignee__r.BillingCity , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingState)), Consignee__r.BillingState, NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingPostalCode)), &quot;, &quot; + Consignee__r.BillingPostalCode , NULL) + &quot; &quot; +
IF(NOT(ISBLANK(Consignee__r.BillingCountry)), Consignee__r.BillingCountry, NULL)</formula>
    <label>Consignee Details on UQ</label>
    <type>Text</type>
</CustomField>