force-app/main/default/objects/FTMSSO__c/fields/Consigneename__c.field-meta.xml
<CustomField>
    <fullName>Consigneename__c</fullName>
    <formula>Consignee__r.AccountNameENG__c</formula>
    <label>Consignee name</label>
    <type>Text</type>
</CustomField>