force-app/main/default/objects/FTMSSO__c/fields/ConsigneesAddress__c.field-meta.xml
<CustomField>
    <fullName>ConsigneesAddress__c</fullName>
    <label>Consignee&apos;s Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>