force-app/main/default/objects/FTMSSO__c/fields/ConsolidationID__c.field-meta.xml
<CustomField>
    <fullName>ConsolidationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidation ID</label>
    <referenceTo>AdvancedShipment__c</referenceTo>
    <relationshipName>F_TMS_S_O</relationshipName>
    <type>Lookup</type>
</CustomField>