force-app/main/default/objects/FTMSSO__c/fields/ContainerDetailonBL__c.field-meta.xml
<CustomField>
    <fullName>ContainerDetailonBL__c</fullName>
    <label>Container Detail on B/L</label>
    <type>TextArea</type>
</CustomField>