force-app/main/default/objects/FTMSSO__c/fields/ContainerMode__c.field-meta.xml
<CustomField>
    <fullName>ContainerMode__c</fullName>
    <label>Container Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>FCL</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>MTY</fullName>
            </value>
            <value>
                <fullName>MTY &amp; FCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>