force-app/main/default/objects/FTMSSO__c/fields/ContainerNo__c.field-meta.xml
<CustomField>
    <fullName>ContainerNo__c</fullName>
    <label>Container No</label>
    <type>TextArea</type>
</CustomField>