force-app/main/default/objects/FTMSSO__c/fields/ContainerNoSealNo__c.field-meta.xml
<CustomField>
    <fullName>ContainerNoSealNo__c</fullName>
    <label>Container No/Seal No</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>