force-app/main/default/objects/FTMSSO__c/fields/ContainerQuantity2__c.field-meta.xml
<CustomField>
    <fullName>ContainerQuantity2__c</fullName>
    <label>Container Quantity 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>